新增：header 與 footer 樣式

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>職旅 Workway｜一起陪伴、探索還有你那些未完成的夢</title>
-    <meta name="description" content="自由工作很美，也很難。我們用 1 對 1 陪伴，陪你從第一步開始，直到夢想變成日常">
-</head>
-<body>
-    
+    <meta
+      name="description"
+      content="自由工作很美，也很難。我們用 1 對 1 陪伴，陪你從第一步開始，直到夢想變成日常"
+    />
+  </head>
+  <body>
     <%- include('./layout/header'); -%>
 
-    <h1 class="index-title">我是首頁</h1>
-
-
+    <h1>職旅 Workway</h1>
 
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
-</body>
+  </body>
 </html>
