--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,15 @@
       name="description"
       content="自由工作很美，也很難。我們用 1 對 1 陪伴，陪你從第一步開始，直到夢想變成日常"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <%- include('./layout/header'); -%>
