--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>聯絡我們｜職旅 Workway</title>
-    <meta name="description" content="每一封郵件，職旅 Workway 都會親自回覆。每一通電話，都是新可能的開始。">
-</head>
-<body>
-    
+    <meta
+      name="description"
+      content="每一封郵件，職旅 Workway 都會親自回覆。每一通電話，都是新可能的開始。"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <%- include('./layout/header'); -%>
 
     <h1>我是contact</h1>
 
-
-
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
-</body>
+  </body>
 </html>
