--- a/pages/memberCenter.html
+++ b/pages/memberCenter.html
@@ -21,14 +21,15 @@
       <div class="container py-12 py-lg-20">
         <div class="row">
           <div class="col-10 mx-auto">
+            <!-- 膠囊連結 -->
             <ul
-              class="nav nav-pills justify-content-center mb-3"
+              class="nav nav-pills justify-content-center mb-6"
               id="pills-tab"
               role="tablist"
             >
               <li class="nav-item" role="presentation">
                 <button
-                  class="nav-link text-black border p-3 px-lg-5 active"
+                  class="nav-link border p-3 px-lg-5 active"
                   id="pills-profile-tab"
                   data-bs-toggle="pill"
                   data-bs-target="#pills-profile"
@@ -37,15 +38,13 @@
                   aria-controls="pills-profile"
                   aria-selected="true"
                 >
-                  <span class="material-symbols-outlined align-bottom">
-                    face
-                  </span>
+                  <span class="material-symbols-outlined"> face </span>
                   <span class="ms-lg-1">個人資料</span>
                 </button>
               </li>
               <li class="nav-item" role="presentation">
                 <button
-                  class="nav-link text-black border p-3 px-lg-5 ms-4 ms-lg-6"
+                  class="nav-link border p-3 px-lg-5 ms-4 ms-lg-6"
                   id="pills-appointment-tab"
                   data-bs-toggle="pill"
                   data-bs-target="#pills-appointment"
@@ -54,7 +53,7 @@
                   aria-controls="pills-appointment"
                   aria-selected="false"
                 >
-                  <span class="material-symbols-outlined align-bottom">
+                  <span class="material-symbols-outlined">
                     pending_actions
                   </span>
                   <span class="ms-lg-1">預約紀錄</span>
@@ -62,7 +61,7 @@
               </li>
               <li class="nav-item" role="presentation">
                 <button
-                  class="nav-link text-black border p-3 px-lg-5 ms-4 ms-lg-6"
+                  class="nav-link border p-3 px-lg-5 ms-4 ms-lg-6"
                   id="pills-plan-tab"
                   data-bs-toggle="pill"
                   data-bs-target="#pills-plan"
@@ -71,27 +70,161 @@
                   aria-controls="pills-plan"
                   aria-selected="false"
                 >
-                  <span class="material-symbols-outlined align-bottom">
-                    list_alt
-                  </span>
+                  <span class="material-symbols-outlined"> list_alt </span>
                   <span class="ms-lg-1">職旅計劃</span>
                 </button>
               </li>
             </ul>
+
+            <!-- 頁面內容 -->
             <div
-              class="tab-content bg-light shadow rounded-4 p-6 p-lg-12"
+              class="tab-content bg-light shadow d-flex rounded-4 p-6 p-lg-12"
               id="pills-tabContent"
             >
               <div
-                class="tab-pane fade show active"
+                class="tab-pane w-100 fade show active"
                 id="pills-profile"
                 role="tabpanel"
                 aria-labelledby="pills-profile-tab"
               >
-                <form action="" class="d-lg-flex">
-                  <legend class="fs-t1 fs-lg-t2 fw-medium">個人資料</legend>
-                  <section></section>
+                <form action="#" class="d-flex flex-column flex-lg-row gap-6">
+                  <!-- 左欄標題 -->
+                  <h1
+                    class="fs-t1 fs-lg-t2 fw-medium mb-4 mb-lg-0"
+                    style="width: 300px"
+                  >
+                    個人資料
+                  </h1>
+
+                  <!-- 右欄表單 -->
+                  <section class="flex-grow-1">
+                    <!-- 個人資料 -->
+                    <div class="d-flex align-items-end mb-6">
+                      <img
+                        src="../assets/images/00_navBar_avatar.png"
+                        alt="會員頭貼"
+                        class="rounded-circle"
+                      />
+                      <button
+                        type="button"
+                        class="btn btn-outline-natural-85 ms-4"
+                      >
+                        <span class="material-symbols-outlined"> upload </span>
+                        更新頭貼
+                      </button>
+                    </div>
+
+                    <div class="form-floating mb-6">
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="inputName"
+                        placeholder="姓名"
+                        value="Mokumaru"
+                      />
+                      <label for="inputName">姓名</label>
+                    </div>
+
+                    <legend>性別</legend>
+                    <fieldset class="mb-6">
+                      <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          name="sex"
+                          id="female"
+                          value="女性"
+                        />
+                        <label class="form-check-label" for="female"
+                          >女性</label
+                        >
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          name="sex"
+                          id="male"
+                          value="男性"
+                        />
+                        <label class="form-check-label" for="male">男性</label>
+                      </div>
+                      <div class="form-check form-check-inline">
+                        <input
+                          class="form-check-input"
+                          type="radio"
+                          name="sex"
+                          id="sexSecret"
+                          value="不願透露"
+                        />
+                        <label class="form-check-label" for="sexSecret"
+                          >不願透露</label
+                        >
+                      </div>
+                    </fieldset>
+
+                    <div class="form-floating mb-6">
+                      <input
+                        type="date"
+                        class="form-control"
+                        id="inputDate"
+                        placeholder="生日"
+                        value="2000/01/10"
+                      />
+                      <label for="inputDate">生日</label>
+                    </div>
+
+                    <div class="form-floating mb-6">
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="inputEmail"
+                        placeholder="電子信箱"
+                        value="mokumaru@mail.com"
+                      />
+                      <label for="inputEmail">信箱</label>
+                      <small class="form-text" aria-describedby="inputEmail"
+                        >盡量勿使用Yahoo或Hotmail郵件信箱，以免因擋信、漏信</small
+                      >
+                    </div>
+
+                    <div class="form-floating mb-6">
+                      <input
+                        type="tel"
+                        class="form-control"
+                        id="inputTel"
+                        placeholder="聯絡電話"
+                        value="09-1234-5678"
+                      />
+                      <label for="inputTel">聯絡電話</label>
+                    </div>
+
+                    <div class="form-floating mb-20 mb-lg-12">
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="inputAddress"
+                        placeholder="通訊地址"
+                        value="高雄市三民區九如一路 87 號"
+                      />
+                      <label for="inputAddress">通訊地址</label>
+                    </div>
+                  </section>
                 </form>
+                <div class="text-center">
+                  <button type="button" class="btn btn-outline-natural-85 pe-3">
+                    重新填寫
+                    <span class="material-symbols-outlined">
+                      chevron_forward
+                    </span>
+                  </button>
+                  <button type="button" class="btn btn-dark pe-3">
+                    儲存更新
+                    <span class="material-symbols-outlined">
+                      chevron_forward
+                    </span>
+                  </button>
+                </div>
               </div>
               <div
                 class="tab-pane fade"
