--- a/pages/memberCenter.html
+++ b/pages/memberCenter.html
@@ -211,14 +211,19 @@
                     </div>
                   </section>
                 </form>
-                <div class="text-center">
-                  <button type="button" class="btn btn-outline-natural-85 pe-3">
+                <div
+                  class="d-flex flex-column flex-lg-row justify-content-center align-items-lg-center"
+                >
+                  <button
+                    type="button"
+                    class="btn btn-outline-natural-85 pe-3 mb-4 mb-lg-auto"
+                  >
                     重新填寫
                     <span class="material-symbols-outlined">
                       chevron_forward
                     </span>
                   </button>
-                  <button type="button" class="btn btn-dark pe-3">
+                  <button type="button" class="btn btn-dark pe-3 ms-lg-6">
                     儲存更新
                     <span class="material-symbols-outlined">
                       chevron_forward
