--- a/pages/memberCenter.html
+++ b/pages/memberCenter.html
@@ -19,6 +19,7 @@
     <%- include('./layout/headerMember'); -%>
 
     <main class="bg-natural-95">
+      <h1 class="visually-hidden">會員中心</h1>
       <div class="container py-12 py-lg-20">
         <div class="row">
           <div class="col-10 mx-auto">
