--- a/memberCenter.html
+++ b/memberCenter.html
@@ -14,74 +14,86 @@
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script type="module" crossorigin src="/hex2025ShoesMission5-7/assets/main-BIooEwmO.js"></script>
-    <link rel="stylesheet" crossorigin href="/hex2025ShoesMission5-7/assets/main-4ktxoaBG.css">
+    <script
+      type="module"
+      crossorigin
+      src="/hex2025ShoesMission5-7/assets/main-BIooEwmO.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      crossorigin
+      href="/hex2025ShoesMission5-7/assets/main-4ktxoaBG.css"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">
-      <img src="/hex2025ShoesMission5-7/assets/00_navBar_logo-CRTeTChE.svg" alt="職旅 Workway LOGO" />
-    </a>
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img
+            src="/hex2025ShoesMission5-7/assets/00_navBar_logo-CRTeTChE.svg"
+            alt="職旅 Workway LOGO"
+          />
+        </a>
 
-    <a
-      class="text-decoration-none order-lg-2 d-flex align-items-center ms-auto"
-      href="memberCenter.html"
-    >
-      <img
-        src="/hex2025ShoesMission5-7/assets/00_navBar_avatar-QGHQ479s.png"
-        alt="會員頭像"
-        class="rounded-circle border border-1 border-natural-85"
-        style="width: 44px; height: 44px"
-      />
-      <span class="text-black fw-medium ms-2">Mokumaru</span>
-    </a>
+        <a
+          class="text-decoration-none order-lg-2 d-flex align-items-center ms-auto"
+          href="memberCenter.html"
+        >
+          <img
+            src="/hex2025ShoesMission5-7/assets/00_navBar_avatar-QGHQ479s.png"
+            alt="會員頭像"
+            class="rounded-circle border border-1 border-natural-85"
+            style="width: 44px; height: 44px"
+          />
+          <span class="text-black fw-medium ms-2">Mokumaru</span>
+        </a>
 
-    <button
-      class="navbar-toggler ms-3"
-      type="button"
-      data-bs-toggle="offcanvas"
-      data-bs-target="#offcanvasNavbar"
-      aria-controls="offcanvasNavbar"
-      aria-expanded="false"
-      aria-label="ToggleNavigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div
-      class="offcanvas offcanvas-top"
-      id="offcanvasNavbar"
-      tabindex="-1"
-      aria-labelledby="offcanvasNavbar"
-    >
-      <div class="offcanvas-header">
         <button
+          class="navbar-toggler ms-3"
           type="button"
-          class="btn-close text-reset"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"
-        ></button>
-      </div>
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-expanded="false"
+          aria-label="ToggleNavigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="offcanvas-body justify-content-center">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="service.html">服務方案</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link ms-lg-3" href="about.html">關於職旅</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link ms-lg-3" href="contact.html">聯絡我們</a>
-          </li>
-        </ul>
+        <div
+          class="offcanvas offcanvas-top"
+          id="offcanvasNavbar"
+          tabindex="-1"
+          aria-labelledby="offcanvasNavbar"
+        >
+          <div class="offcanvas-header">
+            <button
+              type="button"
+              class="btn-close text-reset"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+
+          <div class="offcanvas-body justify-content-center">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">服務方案</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ms-lg-3" href="#">關於職旅</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ms-lg-3" href="#">聯絡我們</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</nav>
+    </nav>
 
     <main class="bg-natural-95">
+      <h1 class="visually-hidden">會員中心</h1>
       <div class="container py-12 py-lg-20">
         <div class="row">
           <div class="col-10 mx-auto">
@@ -1811,27 +1823,27 @@
     </main>
 
     <footer class="footer bg-natural-95 border-top">
-  <nav class="container py-6 py-lg-12">
-    <div
-      class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-center"
-    >
-      <div class="nav justify-content-center mb-2">
-        <div class="d-flex">
-          <a href="service.html" class="nav-link fs-bm">服務方案</a>
-          <a href="about.html" class="nav-link fs-bm">關於職旅</a>
-          <a href="contact.html" class="nav-link fs-bm">聯絡我們</a>
+      <nav class="container py-6 py-lg-12">
+        <div
+          class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-center"
+        >
+          <div class="nav justify-content-center mb-2">
+            <div class="d-flex">
+              <a href="#" class="nav-link fs-bm">服務方案</a>
+              <a href="#" class="nav-link fs-bm">關於職旅</a>
+              <a href="#" class="nav-link fs-bm">聯絡我們</a>
+            </div>
+            <div class="d-flex">
+              <a href="privacy.html" class="nav-link fs-bm">隱私權政策</a>
+              <a href="terms.html" class="nav-link fs-bm">用戶條款</a>
+            </div>
+          </div>
+          <small class="fs-bs text-natural-50 text-center">
+            Copyright © 2025 職旅 workway. All rights reserved.
+          </small>
         </div>
-        <div class="d-flex">
-          <a href="privacy.html" class="nav-link fs-bm">隱私權政策</a>
-          <a href="terms.html" class="nav-link fs-bm">用戶條款</a>
-        </div>
-      </div>
-      <small class="fs-bs text-natural-50 text-center">
-        Copyright © 2025 職旅 workway. All rights reserved.
-      </small>
-    </div>
-  </nav>
-</footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      </nav>
+    </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
