--- a/terms.html
+++ b/terms.html
@@ -14,76 +14,83 @@
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script type="module" crossorigin src="/hex2025ShoesMission5-7/assets/main-BIooEwmO.js"></script>
-    <link rel="stylesheet" crossorigin href="/hex2025ShoesMission5-7/assets/main-4ktxoaBG.css">
+    <script
+      type="module"
+      crossorigin
+      src="/hex2025ShoesMission5-7/assets/main-BIooEwmO.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      crossorigin
+      href="/hex2025ShoesMission5-7/assets/main-4ktxoaBG.css"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">
-      <img src="/hex2025ShoesMission5-7/assets/00_navBar_logo-CRTeTChE.svg" alt="職旅 Workway LOGO" />
-    </a>
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img
+            src="/hex2025ShoesMission5-7/assets/00_navBar_logo-CRTeTChE.svg"
+            alt="職旅 Workway LOGO"
+          />
+        </a>
 
-    <button
-      type="button"
-      class="btn btn-lg btn-outline-natural-90 text-black fs-bm ms-auto order-lg-2"
-    >
-      登入/註冊
-    </button>
-
-    <button
-      class="navbar-toggler ms-3"
-      type="button"
-      data-bs-toggle="offcanvas"
-      data-bs-target="#offcanvasNavbar"
-      aria-controls="offcanvasNavbar"
-      aria-expanded="false"
-      aria-label="ToggleNavigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div
-      class="offcanvas offcanvas-top"
-      id="offcanvasNavbar"
-      tabindex="-1"
-      aria-labelledby="offcanvasNavbar"
-    >
-      <div class="offcanvas-header">
         <button
           type="button"
-          class="btn-close text-reset"
-          data-bs-dismiss="offcanvas"
-          aria-label="Close"
-        ></button>
-      </div>
-
-      <div class="offcanvas-body d-flex flex-column mx-lg-auto">
-        <ul class="navbar-nav">
-          <li class="nav-item text-center">
-            <a class="nav-link py-4 py-lg-2" href="service.html">服務方案</a>
-          </li>
-          <li class="nav-item text-center">
-            <a class="nav-link py-4 py-lg-2 ms-lg-3" href="about.html"
-              >關於職旅</a
-            >
-          </li>
-          <li class="nav-item text-center">
-            <a class="nav-link py-4 py-lg-2 ms-lg-3" href="contact.html"
-              >聯絡我們</a
-            >
-          </li>
-        </ul>
-        <button
-          type="button"
-          class="btn btn-secondary btn-lg fs-t2 fw-bold w-100 mt-auto d-lg-none"
+          class="btn btn-lg btn-outline-natural-90 text-black fs-bm ms-auto order-lg-2"
         >
           登入/註冊
         </button>
+
+        <button
+          class="navbar-toggler ms-3"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-expanded="false"
+          aria-label="ToggleNavigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div
+          class="offcanvas offcanvas-top"
+          id="offcanvasNavbar"
+          tabindex="-1"
+          aria-labelledby="offcanvasNavbar"
+        >
+          <div class="offcanvas-header">
+            <button
+              type="button"
+              class="btn-close text-reset"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+
+          <div class="offcanvas-body d-flex flex-column mx-lg-auto">
+            <ul class="navbar-nav">
+              <li class="nav-item text-center">
+                <a class="nav-link py-4 py-lg-2" href="#">服務方案</a>
+              </li>
+              <li class="nav-item text-center">
+                <a class="nav-link py-4 py-lg-2 ms-lg-3" href="#">關於職旅</a>
+              </li>
+              <li class="nav-item text-center">
+                <a class="nav-link py-4 py-lg-2 ms-lg-3" href="#">聯絡我們</a>
+              </li>
+            </ul>
+            <button
+              type="button"
+              class="btn btn-secondary btn-lg fs-t2 fw-bold w-100 mt-auto d-lg-none"
+            >
+              登入/註冊
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</nav>
+    </nav>
 
     <main class="container py-12 py-lg-20">
       <div class="row">
@@ -160,28 +167,28 @@
     </main>
 
     <footer class="footer bg-natural-95 border-top">
-  <nav class="container py-6 py-lg-12">
-    <div
-      class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-center"
-    >
-      <div class="nav justify-content-center mb-2">
-        <div class="d-flex">
-          <a href="service.html" class="nav-link fs-bm">服務方案</a>
-          <a href="about.html" class="nav-link fs-bm">關於職旅</a>
-          <a href="contact.html" class="nav-link fs-bm">聯絡我們</a>
+      <nav class="container py-6 py-lg-12">
+        <div
+          class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-center"
+        >
+          <div class="nav justify-content-center mb-2">
+            <div class="d-flex">
+              <a href="#" class="nav-link fs-bm">服務方案</a>
+              <a href="#" class="nav-link fs-bm">關於職旅</a>
+              <a href="#" class="nav-link fs-bm">聯絡我們</a>
+            </div>
+            <div class="d-flex">
+              <a href="privacy.html" class="nav-link fs-bm">隱私權政策</a>
+              <a href="terms.html" class="nav-link fs-bm">用戶條款</a>
+            </div>
+          </div>
+          <small class="fs-bs text-natural-50 text-center">
+            Copyright © 2025 職旅 workway. All rights reserved.
+          </small>
         </div>
-        <div class="d-flex">
-          <a href="privacy.html" class="nav-link fs-bm">隱私權政策</a>
-          <a href="terms.html" class="nav-link fs-bm">用戶條款</a>
-        </div>
-      </div>
-      <small class="fs-bs text-natural-50 text-center">
-        Copyright © 2025 職旅 workway. All rights reserved.
-      </small>
-    </div>
-  </nav>
-</footer>
+      </nav>
+    </footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
