修改：依助教建議調整上傳檔案 HTML 結構（by 俞方助教）

--- a/pages/memberCenter.html
+++ b/pages/memberCenter.html
@@ -1073,15 +1073,13 @@
                       <!-- 附件檔案 -->
                       <fieldset>
                         <legend>附件檔案</legend>
-                        <button
-                          type="button"
-                          class="btn btn-outline-natural-85"
-                        >
+                        <label for="file" class="btn btn-outline-natural-85">
                           <span class="material-symbols-outlined">
                             upload
                           </span>
                           上傳檔案
-                        </button>
+                        </label>
+                        <input type="file" id="file" class="d-none" />
                       </fieldset>
                     </div>
                   </section>
